# ppkSPLMeter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SPLMeter.jucer  build-ios.sh  build.sh  sign-and-notarize.sh
.agent/rules/: agent.md
.agent/skills/: dsp.md  ui.md
.agent/troubleshooting/: known-issues.yaml
.agent/troubleshooting/resolutions/: icloud-codesign-fix.md
.agent/workflows/: build.md  debug.md  impl.md  ship.md
.github/workflows/: build-chain.yml  build-windows.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist  SPLMeter.icns
Builds/MacOSX/SPLMeter.xcodeproj/: project.pbxproj
JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
Source/: AWeightingFilter.h  BandChart.h  CWeightingFilter.h  FluctuationStrengthEstimator.h  ImpulseFidelityComponent.h  ImpulsivenessEstimator.h  LFFTComponent.h  LogComponent.cpp  LogComponent.h  LongTermSPLComponent.h  MeterComponent.cpp  MeterComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RoughnessEstimator.h  SettingsComponent.h  SharpnessEstimator.h  SoundDetective.h  SoundDetectiveApple.mm  SoundDetectiveComponent.h  SpectrogramComponent.h  TFLiteDetector.h  TonalityEstimator.h  VisqolComponent.h  entitlements.plist  visqol_ffi.h
Tests/: AWeightingFilterTests.cpp  CWeightingFilterTests.cpp  FluctuationEstimatorTests.cpp  ImpulsivenessEstimatorTests.cpp  LeqTests.cpp  LoudnessAnnoyanceTests.cpp  MarkerTests.cpp  RoughnessEstimatorTests.cpp  SPLCalculationTests.cpp  SharpnessEstimatorTests.cpp  StateSerializationTests.cpp  TestHelpers.h  TonalityEstimatorTests.cpp
